tests/paczka1/small_fuzzy/79482530.err
Error in line 1: Oo69F3 S378 41,2
Error in line 12: S90 S241 1,7
Error in line 13: S90 A938 95,8
